--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -3,6 +3,7 @@
   max-width: 350px !important;
   margin: auto !important;
   margin-top: 30px !important;
+  margin-bottom: 40px !important;
 }
 .projects__links {
   display: flex;
