Updated pics and made changes in about me

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -7,7 +7,7 @@
   flex: 0 0 100%;
   max-width: 100%;
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 
 .section-title h2 {
@@ -23,17 +23,17 @@
   display: block;
 }
 .img-box {
-  max-width: 350px;
+  max-width:580px;
   display: block;
   margin: auto;
-  padding: 15px;
-  box-shadow: 0 0 15px;
+  /* padding: 15px; */
+  box-shadow: 0 0 1px;
 }
 
 .about-section .about-img {
   flex: 0 0 40%;
   max-width: 40%;
-  padding: 0 15px;
+  padding: 0 1px;
 }
 .about-section .about-img .img-box {
   padding: 3px;
@@ -58,7 +58,7 @@
   font-weight: 18px;
   line-height: 26px;
   margin-bottom: 15px;
-  color: #666666;
+  color: #373636;
 }
 .about-section .about-info a {
   text-decoration: none;
